# montreal-listings-etl

./: pyproject.toml
data/input/: montreal-listings.csv  montreal_neighbourhoods.txt
data/output/: montreal_listings_by_neighbourhood.csv  montreal_listings_clean.csv
montreal_listings/: extractor.py  loader.py  main.py
montreal_listings/transform/: __init__.py  reporter.py  transformer.py
